# market-monitor

./: Cargo.toml  README.md
examples/: euler_vaults.rs  morpho_markets.rs
src/: client.rs  config.rs  lib.rs  main.rs
src/euler/: deposits.graphql  mod.rs  scalars.rs  schema.graphql  vaults.graphql  withdraws.graphql
src/morpho/: borrow_rates.graphql  markets.graphql  mod.rs  scalars.rs  supply_rates.graphql
