[package]
name = "market-monitor"
version = "0.1.0"
edition = "2021"
description = "A crate for retrieving market data from DeFi lending platforms via The Graph"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[dependencies]
# GraphQL client
graphql_client = "0.14.0"
# HTTP client
reqwest = { version = "0.11", features = ["json"] }
# Async runtime
tokio = { version = "1", features = ["full"] }
# Error handling
anyhow = "1.0"
# URL parsing
url = "2.5.0"
# Environment variables
dotenv = "0.15.0"
# Serialization/Deserialization
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
# Logging
log = "0.4"
env_logger = "0.11"
# Date and time utilities
chrono = "0.4"
